--- a/matteoguidablog/config.toml
+++ b/matteoguidablog/config.toml
@@ -1,3 +1,5 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://matteoguida.github.io/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
+
+theme = "LoveIt"
